# ROBOCON-2025-ROS2

./: README.md
install/: local_setup.sh  setup.sh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/ament_index/resource_index/parent_prefix_path/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.sh  package.sh
install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
install/robot_base/include/robot_base/robot_base/msg/: position_message.h  projectile_message.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/robot_base/include/robot_base/robot_base/msg/detail/: position_message__builder.hpp  position_message__rosidl_typesupport_fastrtps_c.h  position_message__rosidl_typesupport_fastrtps_cpp.hpp  position_message__rosidl_typesupport_introspection_cpp.hpp  position_message__traits.hpp  position_message__type_support.c  position_message__type_support.h  projectile_message__builder.hpp  projectile_message__functions.c  projectile_message__functions.h  projectile_message__rosidl_typesupport_introspection_cpp.hpp  projectile_message__struct.h  projectile_message__type_support.cpp  projectile_message__type_support.h
install/robot_base/local/lib/python3.10/dist-packages/robot_base/: _robot_base_s.ep.rosidl_typesupport_introspection_c.c
install/robot_base/local/lib/python3.10/dist-packages/robot_base/msg/: _position_message_s.c  _projectile_message.py
install/robot_base/share/robot_base/: local_setup.dsv  package.dsv  package.ps1  package.sh
install/robot_base/share/robot_base/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  export_robot_base__rosidl_generator_cExport-noconfig.cmake  export_robot_base__rosidl_generator_cExport.cmake  export_robot_base__rosidl_generator_pyExport-noconfig.cmake  export_robot_base__rosidl_generator_pyExport.cmake  export_robot_base__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  robot_baseConfig.cmake  robot_base__rosidl_typesupport_cExport.cmake  robot_base__rosidl_typesupport_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/robot_base/share/robot_base/msg/: PositionMessage.idl  PositionMessage.msg
install/robot_command/lib/robot_command/: ps2_controller
install/robot_command/share/robot_command/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_command/share/robot_command/cmake/: robot_commandConfig.cmake
install/robot_command/share/robot_command/launch/: call_node_v1.launch.py
install/robot_intelligent/lib/robot_intelligent/: robot_tracking  shooting
install/robot_intelligent/share/robot_intelligent/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_localization/lib/robot_localization/: odometry_pub_goal  odometry_robot_i  odometry_robot_ii
install/robot_localization/share/ament_index/resource_index/parent_prefix_path/: robot_localization
install/robot_localization/share/robot_localization/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
log/: latest_build  latest_list
src/robot_base/: CMakeLists.txt
src/robot_base/msg/: ProjectileMessage.msg
src/robot_command/: CMakeLists.txt
src/robot_command/launch/: call_node_v1.launch.py
src/robot_command/src/: read_controller.cpp
src/robot_intelligent/: CMakeLists.txt  package.xml
src/robot_intelligent/src/: projectile_motion.cpp  robot_tracking.cpp
src/robot_localization/: CMakeLists.txt
src/robot_localization/src/: odometry_pub_goal.cpp  odometry_publisher_i.cpp  odometry_publisher_ii.cpp
